fix social overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -804,12 +804,13 @@ input[type="radio"].visually-hidden {
 }
 
 .social-list-item {
-  margin: 0 0 0 9px;
+  margin: 0 0 9px 9px;
   padding: 0 0 0 0;
 }
 
-.social-list-item:first-child {
-  margin: 0;
+.social-list-item:first-child,
+.social-list-item:nth-child(5) {
+  margin-left: 0;
 }
 
 .social-list-item-link {
